--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ locale                   : "en-US"
 title                    : "Fintan Hardy"
 title_separator          : "-"
 name                     : &name "Fintan Hardy"
-description              : &description "personal description"
-url                      : "https://natniif.github.io/fintanhardy.github.io/" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+description              : &description "Imperial College PhD student in Material Science"
+url                      : https://finhardy.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "FinHardy/fintanhardy.github.io"
 
@@ -25,7 +25,7 @@ author:
   name             : "Fintan Hardy"
   pronouns         : # example: "she/her"  
   bio              : "PhD student in Material Science"
-  location         : "London"
+  location         : "London, UK"
   employer         : "Imperial College London"
   uri              : # URL
   email            : "f[dot]hardy24[at]imperial[dot]ac[dot]uk" 
