--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ local/
 # Ignore the Gemfile that is generated
 Gemfile.lock
 
+.DS_Store
+
 # Ignore files created by npm
 node_modules
 package-lock.json
