--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Fintan Hardy"
 title_separator          : "-"
 name                     : &name "Fintan Hardy"
 description              : &description "Imperial College PhD student in Material Science"
-url                      : https://finhardy.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://finhardy.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "FinHardy/fintanhardy.github.io"
 
