Update CV and personal information; add new CV file, refine details, and adjust navigation links

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,20 +14,23 @@ main:
   - title: "Talks"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  # - title: "Teaching"
+  #   url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/CV_2024-10-24.pdf
+
+  - title: Software
+    url: https://github.com/finhardy
     
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
